Revert from accidental pull on prod build

--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -8,11 +8,16 @@
 :root {
     --primary-color: #fff !important;
     --secondary-color: #282c34 !important;
+
+    --navbar-color: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='white' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E") !important;
 }
   
 [data-theme="dark"] {
     --primary-color: #282c34 !important;
     --secondary-color: #fff !important;
+
+    --navbar-color: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='black' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E") !important;
+
 }
   
 
@@ -20,3 +25,16 @@
     background-color: var(--secondary-color);
     color: var(--primary-color);
 }
+
+.card {
+    background-color: transparent !important;
+}
+
+.menu-link {
+    color: var(--primary-color) !important;
+}
+
+.navbar-toggler-icon {
+    background-image: var(--navbar-color) !important; 
+}
+.navbar-toggler { border-color: #008000; }
