--- a/src/assets/scss/theme-switcher.scss
+++ b/src/assets/scss/theme-switcher.scss
@@ -1,6 +1,3 @@
-/* CSS styling for our switch */
-/* This switch was styled with the help of w3schools */
-/* https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_switch */
 .switch {
     position: relative;
     display: inline-block;
@@ -21,7 +18,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: #ccc;
+    background-color: black;
     -webkit-transition: .4s;
     transition: .4s;
   }
@@ -33,23 +30,26 @@
     width: 26px;
     left: 4px;
     bottom: 4px;
-    background-color: white;
     -webkit-transition: .4s;
-    transition: .4s;
+    transition: .5s;
+    background-image: url('../moon.png');
   }
   
   input:checked+.slider {
-    background-color: #2196F3;
+    background-color: white;
+    border: 1px solid black;
   }
   
   input:focus+.slider {
-    box-shadow: 0 0 1px #2196F3;
+    box-shadow: 0 0 1px white;
+    border: 1px solid black;
   }
   
   input:checked+.slider:before {
     -webkit-transform: translateX(26px);
     -ms-transform: translateX(26px);
     transform: translateX(26px);
+    background-image: url('../sun.png');
   }
   
   /* Rounded sliders */
