Fix footer margin

--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -52,7 +52,7 @@ footer {
     /* Set the fixed height of the footer here */
     height: 60px !important;
     line-height: 60px !important; /* Vertically center the text there */
-    margin: 75px 0 35px;
+    margin: 300px 0 0;
 }
 
 .requiredLabel:after {
