--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -1,4 +1,5 @@
 @import './theme-switcher.scss';
+@import './resume.scss';
 
 .clock {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -18,7 +19,7 @@
     --navbar-color: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='black' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E") !important;
 
 }
-  
+ 
 
 #mainApp {
     background-color: var(--secondary-color);
@@ -39,9 +40,11 @@
 .navbar-toggler { border-color: #008000; }
 
 body {
+  @media (min-width: 1199.98px){
+    height: 80vh !important;
+  }
+    height: 100vh !important;
     padding: 35px 0;
-    min-height: 100vh !important;
-    padding-bottom: 100px !important;
     overflow-x: hidden !important;
     background: #262730 url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/93/noise-bg.png) repeat 0 0;
 }
@@ -50,9 +53,11 @@ footer {
     bottom: 0 !important;
     width: 100% !important;
     /* Set the fixed height of the footer here */
-    height: 60px !important;
+    @media (min-width: 1199.98px){
+      height: calc(100% - 80vh);
+    }
+    height: calc(100% - 60px);
     line-height: 60px !important; /* Vertically center the text there */
-    margin: 300px 0 0;
 }
 
 .requiredLabel:after {
