--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,12 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+footer {
+  position:absolute;
+  left:0;
+  bottom:0;
+  right:0;
+}
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
