--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -1,35 +1,36 @@
-@import './theme-switcher.scss';
-@import './resume.scss';
+@import "./theme-switcher.scss";
+@import "./resume.scss";
+@import "./fonts.scss";
 
 .clock {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 :root {
-    --primary-color: #fff !important;
-    --secondary-color: #282c34 !important;
+  --primary-color: #fff !important;
+  --secondary-color: #282c34 !important;
 
-    --navbar-color: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='white' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E") !important;
+  --navbar-color: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='white' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E") !important;
 }
-  
+
 [data-theme="dark"] {
-    --primary-color: #282c34 !important;
-    --secondary-color: #fff !important;
+  --primary-color: #282c34 !important;
+  --secondary-color: #fff !important;
 
-    --navbar-color: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='black' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E") !important;
-
+  --navbar-color: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='black' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E") !important;
 }
- 
 
 #mainApp {
-    background-color: var(--secondary-color);
-    color: var(--primary-color);
-    overflow-x: hidden !important;
+  background-color: var(--secondary-color);
+  color: var(--primary-color);
+  overflow-x: hidden !important;
 }
 
 .main {
   position: relative;
   min-height: calc(100vh - 10rem);
+  padding-left: 50rem;
+  padding-right: 50rem;
 }
 
 .footer {
@@ -39,48 +40,55 @@
 }
 
 .card {
-    background-color: transparent !important;
+  background-color: transparent !important;
 }
 
 .menu-link {
-    color: var(--primary-color) !important;
+  color: var(--primary-color) !important;
 }
 
 .nav-link {
-  padding: .5rem .7rem !important;
+  padding: 0.5rem 0.7rem !important;
 }
 
 .navbar-toggler-icon {
-    background-image: var(--navbar-color) !important; 
+  background-image: var(--navbar-color) !important;
 }
-.navbar-toggler { border-color: #008000; }
+.navbar-toggler {
+  border-color: #008000;
+}
 
 body {
-  @media (min-width: 1199.98px){
+  @media (min-width: 1199.98px) {
     height: 80vh !important;
   }
-    height: 100vh !important;
-    padding: 35px 0;
-    overflow-x: hidden !important;
-    background: #262730 url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/93/noise-bg.png) repeat 0 0;
+  height: 100vh !important;
+  padding: 35px 0;
+  overflow-x: hidden !important;
+  background: #262730
+    url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/93/noise-bg.png) repeat 0 0;
 }
 
 .requiredLabel:after {
-    font-weight: bold;
-    color: #e32 !important;
-    content: ' *' !important;
-    display:inline !important;
+  font-weight: bold;
+  color: #e32 !important;
+  content: " *" !important;
+  display: inline !important;
 }
 
 @font-face {
-	font-family: 'icomoon';
-	src:url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/93/icomoon.eot?3qkin2');
-	src:url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/93/icomoon.eot?#iefix3qkin2') format('embedded-opentype'),
-		url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/93/icomoon.woff?3qkin2') format('woff'),
-		url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/93/icomoon.ttf?3qkin2') format('truetype'),
-		url('fhttps://s3-us-west-2.amazonaws.com/s.cdpn.io/93/icomoon.svg?3qkin2#icomoon') format('svg');
-	font-weight: normal;
-	font-style: normal;
+  font-family: "icomoon";
+  src: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/93/icomoon.eot?3qkin2");
+  src: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/93/icomoon.eot?#iefix3qkin2")
+      format("embedded-opentype"),
+    url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/93/icomoon.woff?3qkin2")
+      format("woff"),
+    url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/93/icomoon.ttf?3qkin2")
+      format("truetype"),
+    url("fhttps://s3-us-west-2.amazonaws.com/s.cdpn.io/93/icomoon.svg?3qkin2#icomoon")
+      format("svg");
+  font-weight: normal;
+  font-style: normal;
 }
 
 .social-networks {
@@ -121,7 +129,7 @@ body {
     &:after {
       position: relative;
       display: block;
-      font-family: 'icomoon';
+      font-family: "icomoon";
       font-style: normal;
       font-weight: normal;
       font-variant: normal;
@@ -132,33 +140,40 @@ body {
       line-height: 66px;
     }
 
-    &:hover, &:focus {
+    &:hover,
+    &:focus {
       text-decoration: none;
     }
   }
-  
-  &.spin-icon a:hover:after, &.spin-icon a:focus:after {
+
+  &.spin-icon a:hover:after,
+  &.spin-icon a:focus:after {
     transition: transform 0.4s ease-out;
     transform: rotateZ(360deg);
   }
-  
-  &.square a:hover:before, &.square a:focus:before {
+
+  &.square a:hover:before,
+  &.square a:focus:before {
     border-radius: 0;
   }
-  
-  &.bounce a:hover, &.bounce a:focus {
+
+  &.bounce a:hover,
+  &.bounce a:focus {
     animation: bounce 1s;
   }
-  
-  $networks: linkedin '\eac9' #0077b5, facebook '\e603' #3b5998, twitter '\e618' #00b0ed, github '\eab1' #4183c4, instagram '\e604' #3f729b, vimeo '\ea9c' #1ab7ea, twitch '\ea9b' #6441a5, pinterest '\e605' #cc2127;
-  
+
+  $networks: linkedin "\eac9"#0077b5, facebook "\e603"#3b5998,
+    twitter "\e618"#00b0ed, github "\eab1"#4183c4, instagram "\e604"#3f729b,
+    vimeo "\ea9c"#1ab7ea, twitch "\ea9b"#6441a5, pinterest "\e605"#cc2127;
+
   @each $network in $networks {
-     .icon-#{nth($network, 1)} {
-       &:after {
-         content: '#{nth($network, 2)}';
+    .icon-#{nth($network, 1)} {
+      &:after {
+        content: "#{nth($network, 2)}";
       }
 
-      &:hover:before, &:focus:before {
+      &:hover:before,
+      &:focus:before {
         background: nth($network, 3);
       }
     }
@@ -166,22 +181,26 @@ body {
 }
 
 @keyframes bounce {
-  0%, 20%, 53%, 80%, 100% {
-    transition-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
-    transform: translate3d(0,0,0);
+  0%,
+  20%,
+  53%,
+  80%,
+  100% {
+    transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+    transform: translate3d(0, 0, 0);
   }
 
   40% {
-    transition-timing-function: cubic-bezier(0.755, 0.050, 0.855, 0.060);
+    transition-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
     transform: translate3d(0, -6px, 0);
   }
 
   70% {
-    transition-timing-function: cubic-bezier(0.755, 0.050, 0.855, 0.060);
+    transition-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
     transform: translate3d(0, -4px, 0);
   }
 
   90% {
-    transform: translate3d(0,-2px,0);
+    transform: translate3d(0, -2px, 0);
   }
 }
