--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -2,6 +2,36 @@
 @import "./resume.scss";
 @import "./fonts.scss";
 
+html,
+body {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  min-height: 100vh;
+  overflow-x: hidden !important;
+  background: #262730
+    url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/93/noise-bg.png) repeat 0 0;
+}
+
+.container {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  flex: 1;
+}
+
+header,
+main,
+footer {
+  flex-shrink: 0;
+}
+
+.footer {
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin-top: auto !important;
+}
+
 .clock {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
@@ -24,6 +54,7 @@
   background-color: var(--secondary-color);
   color: var(--primary-color);
   overflow-x: hidden !important;
+  display: flex;
 }
 
 .main {
@@ -31,12 +62,6 @@
   min-height: calc(100vh - 10rem);
   padding-left: 50rem;
   padding-right: 50rem;
-}
-
-.footer {
-  position: absolute;
-  left: 0;
-  right: 0;
 }
 
 .card {
@@ -56,17 +81,6 @@
 }
 .navbar-toggler {
   border-color: #008000;
-}
-
-body {
-  @media (min-width: 1199.98px) {
-    height: 80vh !important;
-  }
-  height: 100vh !important;
-  padding: 35px 0;
-  overflow-x: hidden !important;
-  background: #262730
-    url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/93/noise-bg.png) repeat 0 0;
 }
 
 .requiredLabel:after {
