chore: resume update fix: contacts adjustment fix: blog ui adjustment

--- a/src/assets/scss/resume.scss
+++ b/src/assets/scss/resume.scss
@@ -1,3 +1,12 @@
+.yacooba-container {
+    .yacooba-icon {
+        background-image: url('../yacooba.png') !important;
+        background: 'black';
+        background-size: 100% !important;
+        background-position: center !important;
+    }
+}
+
 .nearsoft-container {
     .nearsoft-icon {
         background-image: url('../nearsoft.png') !important;
