chore: project improvements

--- a/src/assets/scss/resume.scss
+++ b/src/assets/scss/resume.scss
@@ -1,7 +1,7 @@
 .yacooba-container {
   .yacooba-icon {
-    background-image: url("../yacooba.png") !important;
-    background: "black";
+    background-image: url('../yacooba.png') !important;
+    background: 'black';
     background-size: 100% !important;
     background-position: center !important;
   }
@@ -9,7 +9,7 @@
 
 .nearsoft-container {
   .nearsoft-icon {
-    background-image: url("../nearsoft.png") !important;
+    background-image: url('../nearsoft.png') !important;
     background-size: 100% !important;
     background-position: center !important;
   }
@@ -17,7 +17,7 @@
 
 .tv-app-container {
   .tv-app-icon {
-    background-image: url("../tvappagency.jpeg") !important;
+    background-image: url('../tvappagency.jpeg') !important;
     background-size: 150% !important;
     background-position: center !important;
   }
@@ -25,7 +25,7 @@
 
 .uma-container {
   .uma-icon {
-    background-image: url("../uma.png") !important;
+    background-image: url('../uma.png') !important;
     background-size: 150% !important;
     background-position: center !important;
   }
