--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -1,6 +1,6 @@
-@import "./theme-switcher.scss";
-@import "./resume.scss";
-@import "./fonts.scss";
+@import './theme-switcher.scss';
+@import './resume.scss';
+@import './fonts.scss';
 
 html,
 body {
@@ -9,8 +9,7 @@ body {
   width: 100%;
   min-height: 100vh;
   overflow-x: hidden !important;
-  background: #262730
-    url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/93/noise-bg.png) repeat 0 0;
+  background: #262730 url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/93/noise-bg.png) repeat 0 0;
 }
 
 .container {
@@ -43,7 +42,7 @@ footer {
   --navbar-color: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='white' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E") !important;
 }
 
-[data-theme="dark"] {
+[data-theme='dark'] {
   --primary-color: #282c34 !important;
   --secondary-color: #fff !important;
 
@@ -86,21 +85,18 @@ footer {
 .requiredLabel:after {
   font-weight: bold;
   color: #e32 !important;
-  content: " *" !important;
+  content: ' *' !important;
   display: inline !important;
 }
 
 @font-face {
-  font-family: "icomoon";
-  src: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/93/icomoon.eot?3qkin2");
-  src: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/93/icomoon.eot?#iefix3qkin2")
-      format("embedded-opentype"),
-    url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/93/icomoon.woff?3qkin2")
-      format("woff"),
-    url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/93/icomoon.ttf?3qkin2")
-      format("truetype"),
-    url("fhttps://s3-us-west-2.amazonaws.com/s.cdpn.io/93/icomoon.svg?3qkin2#icomoon")
-      format("svg");
+  font-family: 'icomoon';
+  src: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/93/icomoon.eot?3qkin2');
+  src: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/93/icomoon.eot?#iefix3qkin2')
+      format('embedded-opentype'),
+    url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/93/icomoon.woff?3qkin2') format('woff'),
+    url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/93/icomoon.ttf?3qkin2') format('truetype'),
+    url('fhttps://s3-us-west-2.amazonaws.com/s.cdpn.io/93/icomoon.svg?3qkin2#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -127,7 +123,7 @@ footer {
     text-decoration: none;
 
     &:before {
-      content: "";
+      content: '';
       position: absolute;
       top: 50%;
       left: 50%;
@@ -143,7 +139,7 @@ footer {
     &:after {
       position: relative;
       display: block;
-      font-family: "icomoon";
+      font-family: 'icomoon';
       font-style: normal;
       font-weight: normal;
       font-variant: normal;
@@ -176,14 +172,14 @@ footer {
     animation: bounce 1s;
   }
 
-  $networks: linkedin "\eac9"#0077b5, facebook "\e603"#3b5998,
-    twitter "\e618"#00b0ed, github "\eab1"#4183c4, instagram "\e604"#3f729b,
-    vimeo "\ea9c"#1ab7ea, twitch "\ea9b"#6441a5, pinterest "\e605"#cc2127;
+  $networks: linkedin '\eac9'#0077b5, facebook '\e603'#3b5998, twitter '\e618'#00b0ed,
+    github '\eab1'#4183c4, instagram '\e604'#3f729b, vimeo '\ea9c'#1ab7ea, twitch '\ea9b'#6441a5,
+    pinterest '\e605'#cc2127;
 
   @each $network in $networks {
     .icon-#{nth($network, 1)} {
       &:after {
-        content: "#{nth($network, 2)}";
+        content: '#{nth($network, 2)}';
       }
 
       &:hover:before,
