--- a/src/assets/scss/theme-switcher.scss
+++ b/src/assets/scss/theme-switcher.scss
@@ -25,14 +25,14 @@
 
 .slider:before {
   position: absolute;
-  content: "";
+  content: '';
   height: 26px;
   width: 26px;
   left: 4px;
   bottom: 4px;
   -webkit-transition: 0.4s;
   transition: 0.5s;
-  background-image: url("../moon.png");
+  background-image: url('../moon.png');
 }
 
 input:checked + .slider {
@@ -49,7 +49,7 @@ input:checked + .slider:before {
   -webkit-transform: translateX(26px);
   -ms-transform: translateX(26px);
   transform: translateX(26px);
-  background-image: url("../sun.png");
+  background-image: url('../sun.png');
 }
 
 /* Rounded sliders */
